--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
     "express-jwt": "^7.7.5",
     "firebase-admin": "^11.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.1",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.18"
+    "nodemon": "^2.0.18",
+    "slugify": "^1.6.5"
   }
 }
