--- a/backend/package.json
+++ b/backend/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "express-jwt": "^7.7.5",
+    "fast-csv": "^4.3.6",
     "firebase-admin": "^11.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.18",
-    "slugify": "^1.6.5"
+    "slugify": "^1.6.5",
+    "yahoo-finance2": "^2.8.0"
   }
 }
