--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "antd": "^4.21.5",
     "axios": "^0.27.2",
     "firebase": "^9.9.1",
+    "plotly.js": "^2.27.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-plotly.js": "^2.6.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
