--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
@@ -24,6 +25,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.18",
     "slugify": "^1.6.5",
+    "tradingeconomics": "^2.2.9",
     "yahoo-finance2": "^2.8.0"
   }
 }
