--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,4 @@
 
+REACT_APP_REGISTER_REDIRECT_URL='https://seasonfx.vercel.app/register/complete'
+REACT_APP_FORGOT_PASSWORD_REDIRECT="https://seasonfx.vercel.app/login"
+REACT_APP_API='https://seasonfx-1.onrender.com:8000/api'
