--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -22,5 +22,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 backend/routes/auth.js
-backend/config/fbServiceAccountKey.json.json
+backend/config/fbServiceAccountKey.json
 backend/config/fbServiceAccountKey.json.json
